--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.4",
     "forever": "^0.15.3",
     "fusioncharts": "^3.12.2",
+    "heroku": "^7.18.5",
     "jquery": "^3.3.1",
     "mdi": "^2.2.43",
     "moment": "^2.22.2",
